tests/NormalTests/paczka1/fuzzy1/79562643.err
Error in line 8: p97 A0 39,6
Error in line 9: p97 A0 120,8
Error in line 13: 9gwgl A0 39,8
Error in line 16: 9gwgl A0 82,0
Error in line 10: cLSD S706 258,6
Error in line 24: 9gwgl A0 62,7
Error in line 25: eIHon A0 84,8
Error in line 31: eIHon A0 316,3
Error in line 36: 9gwgl A0 181,8
Error in line 35: eIHon A125 82,2
Error in line 40: PkGsvq A0 7,4
